# batter

./: .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst  TODO  d6575763099d_job_manager.sbatch  environment.yml  environment_mac.yml  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
batter/: BAT.py  __init__.py  api.py  batpy.py  batter.py  batter_pdb.py  builder.py  cli.py  components.py  input_process.py  ligand_process.py  mdin.py  rbfe.py  results.py  run_in_batch.py  simulation.py  utils.py
batter_v1/: api.py  batpy.py  batter.py  builder.py  config.py  input_process.py  ligand_process.py  mdin.py  old_cli.py  orchestrate.py  results.py  run_in_batch.py  simulation.py
batter_v2/: __init__.py
devtools/: README.md
docs/: Makefile  README.md  analysis.rst  api.rst  cli.rst  conf.py  configuration.rst  developer_guide.rst  getting_started.rst  index.rst  make.bat  parameterisation.rst  rbfe.rst  remd_submission.rst  requirements.yaml  slurm_headers.rst  tutorial.rst  user_guide.rst
examples/: 6a06d37a6894_job_manager.sbatch  abfe_pipeline.py  abfe_rest.ipynb  analysis.ipynb  generate_rmsf_restraints.ipynb  mabfe.yaml  mabfe_ash_gc.yaml  mabfe_batch.yaml  mabfe_example.yaml  mabfe_ligand.yaml  mabfe_nonmembrane.yaml  mabfe_nonmembrane_example.yaml  mabfe_remd.yaml  mabfe_remd_example.yaml  mabfe_test.yaml  masfe.yaml  masfe_example.yaml  md.yaml  md_apo_example.yaml  md_example.yaml  membrane_input.in  pipeline.py  plot_rbfe.ipynb  rbfe.yaml  rbfe_48win_example.yaml  rbfe_example.yaml  rbfe_pipeline.py  rbfe_rest.ipynb  run_batter.ipynb  run_batter_abfe.ipynb  run_batter_abfe_multiple.ipynb  run_batter_abfe_old.ipynb  run_batter_pipeline.py  run_batter_rbfe.ipynb  sim_validation.ipynb  submit_pipeline.sbatch  troubleshooting.ipynb
old_scripts/: BAT.py
scripts/: binding_affinity.py  cancel_jobs.sh  check_missing.sh  check_simulations.sh  get_protonation.ipynb  input-dd-amber.in  mbar_rest.ipynb  mbar_sdr.ipynb
scripts_membrane/: BAT.py  input-dd-amber.in
tests/: conftest.py  test_analysis_cinnabar.py  test_analysis_cycle_closure.py  test_analysis_logging.py  test_analysis_remd.py  test_analysis_results.py  test_api.py  test_batch_cmds.py  test_batch_ligand_process.py  test_batch_slurm_wrapper.py  test_box_helpers.py  test_build_complex_helpers.py  test_builder.py  test_check_run_bash.py  test_check_run_parsers.py  test_cli.py  test_cli_jobname_parse.py  test_config_functions.py  test_config_load.py  test_equil_resume_templates.py  test_exec_amber_mdin.py  test_exec_local.py  test_exec_slurm.py  test_exec_slurm_mgr.py  test_executable_overrides.py  test_fe_analysis_rbfe.py  test_fe_batch.py  test_fe_handler_remd.py  test_fe_repo.py  test_md_pipeline.py  test_ops_amber.py  test_orchestrate_ligand_names.py  test_orchestrate_ligands.py  test_orchestrate_markers.py  test_orchestrate_run.py  test_param_ligand.py  test_param_ligands_apo.py  test_param_ligands_handler.py  test_prepare_fe.py  test_prepare_fe_windows.py  (+20 more)
tutorial/: README  abfe.in  abfe_manager.sbatch  pipeline.py  (+1 more)
(+1597 files in other folders)
