[build-system]
requires = ["setuptools>=61.0", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "batter"
description = "A python package that set up FEP simulations with bat.py"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Yuxuan Zhuang", email = "yuxuan.zhuang@stanford.edu" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "MDAnalysis>=2.8.0",
    "pandas",
    "pydantic",
    "click",
    "loguru"
]

[project.scripts]
old_batter = "batter_v1.old_cli:main"
batter = "batter.cli.run:cli"

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
  "pytest-snapshot",
]

[tool.setuptools]
zip-safe = false
include-package-data = false

# Find both packages at the repo root
[tool.setuptools.packages.find]
namespaces = false
where = ["."]

# Include type markers (and any other static data you want) for both packages
[tool.setuptools.package-data]
batter = ["py.typed", "data/**/*", "templates/**/*"]
batter_v1 = ["py.typed", "data/**/*"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "batter/_version.py"